--- a/src/components/MoviesList/movies-list/movies-list.sass
+++ b/src/components/MoviesList/movies-list/movies-list.sass
@@ -1,6 +1,6 @@
 .movies-list
   background-color: #FFFFFF
-  max-width: 1002px
+  width: 1002px
   min-height: 1147px
   box-sizing: border-box
   margin: 0 auto
