add antd components

--- a/src/components/App/app/app.sass
+++ b/src/components/App/app/app.sass
@@ -1,2 +1,8 @@
 .app
   display: flex
+  background-color: #FFFFFF
+  width: 1002px
+  margin: 0 auto
+  flex-direction: column
+  padding: 21px 32px
+  box-sizing: border-box
