--- a/src/components/MoviesList/movies-list/movies-list.sass
+++ b/src/components/MoviesList/movies-list/movies-list.sass
@@ -1,10 +1,7 @@
 .movies-list
   background-color: #FFFFFF
-  width: 1002px
   min-height: 1147px
-  box-sizing: border-box
-  margin: 0 auto
-  padding: 21px 32px
+  margin: 34px auto 36px auto
   display: flex
   align-content: flex-start
   flex-wrap: wrap
