--- a/src/components/App/app/app.sass
+++ b/src/components/App/app/app.sass
@@ -1,7 +1,7 @@
 .app
   display: flex
   background-color: #FFFFFF
-  width: 1002px
+  max-width: 1002px
   margin: 0 auto
   flex-direction: column
   padding: 21px 32px
