--- a/src/components/MoviesList/movies-list/movies-list.sass
+++ b/src/components/MoviesList/movies-list/movies-list.sass
@@ -1,6 +1,6 @@
 .movies-list
   background-color: #FFFFFF
-  min-height: 1147px
+  min-height: 78vh
   margin: 34px auto 36px auto
   display: flex
   align-content: flex-start
