add rating layout

--- a/src/components/Card/card/__title/card__title.sass
+++ b/src/components/Card/card/__title/card__title.sass
@@ -1,5 +1,9 @@
 .card__title
   margin: 0
+  max-width: 200px
   font-size: 20px
   line-height: 28px
   font-weight: 500
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
