--- a/src/components/Card/card/card.sass
+++ b/src/components/Card/card/card.sass
@@ -5,6 +5,7 @@
 @import ./__genres/card__genres
 @import ./__info/card__info
 @import ./__title/card__title
+@import ./__rating/card__rating
 
 .card
   width: 451px
