--- a/src/components/Card/card/__info/card__info.sass
+++ b/src/components/Card/card/__info/card__info.sass
@@ -1,5 +1,6 @@
 .card__info
-  margin: 10px 20px
+  margin: 10px 10px 20px 20px
   display: flex
   flex-direction: column
   gap: 7px
+  position: relative
