add mobile version layout

--- a/src/components/App/app/app.sass
+++ b/src/components/App/app/app.sass
@@ -6,3 +6,11 @@
   flex-direction: column
   padding: 21px 32px
   box-sizing: border-box
+
+@media screen and (max-width: 973px) 
+  .app
+    max-width: 600px
+
+@media screen and (max-width: 509px)
+  .app
+     padding: 8px 16px
