--- a/src/components/Card/card/__cover/card__cover.sass
+++ b/src/components/Card/card/__cover/card__cover.sass
@@ -3,3 +3,14 @@
   height: 279px
   display: block
   object-fit: cover
+  grid-row-start: 1
+  grid-row-end: 4
+
+
+@media screen and (max-width: 509px)
+  .card__cover
+    width: 60px
+    height: 91px
+    margin: 10px 0 0 10px
+    grid-row-start: 1
+    grid-row-end: 1
