--- a/src/components/Card/card/__rating/card__rating.sass
+++ b/src/components/Card/card/__rating/card__rating.sass
@@ -5,9 +5,15 @@
   height: 30px
   border-radius: 50%
   border: 2px solid red
-  right: -6px
+  top: 8px
+  right: 8px
   text-align: center
   font-size: 12px
   line-height: 29px
   font-weight: 700
   cursor: default
+
+@media screen and (max-width: 509px)
+  .card__rating
+    top: 5px
+    right: 6px
