--- a/src/components/Card/card/__title/card__title.sass
+++ b/src/components/Card/card/__title/card__title.sass
@@ -4,6 +4,11 @@
   font-size: 20px
   line-height: 28px
   font-weight: 500
+  letter-spacing: 0.4px
   white-space: nowrap
   text-overflow: ellipsis
   overflow: hidden
+
+@media screen and (max-width: 420px)
+  .card__title
+    max-width: 160px
