--- a/src/components/MoviesList/movies-list/movies-list.sass
+++ b/src/components/MoviesList/movies-list/movies-list.sass
@@ -6,3 +6,12 @@
   align-content: flex-start
   flex-wrap: wrap
   gap: 36px
+
+@media screen and (max-width: 1002px) 
+  .movies-list
+    gap: 20px
+    justify-content: center
+
+@media screen and (max-width: 509px)
+  .movies-list
+    margin-top: 10px
