--- a/src/index.sass
+++ b/src/index.sass
@@ -4,3 +4,7 @@ body
   font-family: "Inter", "system-ui"
   margin: 0
   background-color: #F7F7F7
+
+@media screen and (max-width: 973px) 
+  body
+    background-color: white
