--- a/src/components/Card/card/__info/card__info.sass
+++ b/src/components/Card/card/__info/card__info.sass
@@ -1,6 +1,9 @@
 .card__info
-  margin: 10px 10px 20px 20px
+  margin: 10px 10px 0 22px
   display: flex
   flex-direction: column
-  gap: 7px
-  position: relative
+  gap: 8px
+
+@media screen and (max-width: 509px)
+  .card__info
+    margin-left: 12px
