--- a/src/components/Card/card/card.sass
+++ b/src/components/Card/card/card.sass
@@ -8,7 +8,22 @@
 @import ./__rating/card__rating
 
 .card
-  width: 451px
-  height: 279px
+  max-width: 451px
+  position: relative
+  max-height: 279px
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15)
-  display: flex
+  display: grid
+  grid-template-columns: 183px 268px
+  grid-template-rows: auto auto 46px 
+
+@media screen and (max-width: 509px)
+  .card
+    max-height: 245px
+    width: 388px
+    grid-template-columns: 70px auto
+    grid-template-rows: auto auto 46px 
+
+@media screen and (max-width: 420px)
+  .card
+    width: 100%
+    max-height: 100%
